correct overflow

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@
     --lightFont: antiquewhite;
     font-family: 'Poppins', sans-serif;
 }
+#root{
+  overflow: hidden;
+}
 
 .darkFont{
     color:var(--darkFont)
